--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -19,12 +19,21 @@
   #content {
     flex-grow: 1;
     overflow: auto;
+    background-color: blanchedalmond;
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    height: 100%;
+  }
+
+  :host ::ng-deep app-chat,app-admin {
+    display: flex;
+    flex-grow: 1;
   }
   
+  .router-outlet {
+    flex-grow: 0;
+  }
+
   /* Footer */
   #footer {
     flex-shrink: 0;
