add displaying messages with mocked conversation

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -19,7 +19,8 @@
   #content {
     flex-grow: 1;
     overflow: auto;
-    background-color: blanchedalmond;
+    background-color:#E0AAFF;
+    color: white;
     display: flex;
     flex-direction: column;
     height: 100%;
