--- a/src/app/chat/content/content.component.html
+++ b/src/app/chat/content/content.component.html
@@ -1,1 +1,12 @@
-<p>content works!</p>
+<div class="messages-container">
+    <div class="messages">
+        <div *ngFor="let message of chatMessages" class="message"
+            [ngClass]="{'bot-message': message.author === 'bot', 'user-message': message.author === 'user'}">
+            <p>{{ message.author }} - {{ message.date | date }}</p>
+            <p>{{ message.text }}</p>
+        </div>
+    </div>
+    <div class="input-message">
+        <input type="text" placeholder="Write a message...">
+    </div>
+</div>
