--- a/src/app/shared/header/header.component.scss
+++ b/src/app/shared/header/header.component.scss
@@ -16,7 +16,7 @@ ul {
     font-weight: bold;
     text-decoration: none;
     color: #fff;
-    background-color: #333;
+    background-color: #10002B;
     border: none;
     border-radius: 4px;
     transition: all 0.3s ease;
