--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap');
+
+
 html, body {
     height: 100%;
     margin: 0;
+    font-family: 'Poppins', sans-serif;
   }
+
