Add chat input area

--- a/src/app/chat/chat.component.scss
+++ b/src/app/chat/chat.component.scss
@@ -11,7 +11,7 @@ html, body{
 .chat-navigation {
     flex-shrink: 0;
     min-width: 300px;
-    background-color: #3A0CA3;
+    background-color: #262830;
 }
 
 .chat-content {
