Add resize text area directive

--- a/src/app/chat/content/content.component.html
+++ b/src/app/chat/content/content.component.html
@@ -6,7 +6,7 @@
         </div>
     </div>
     <div class="input-message">
-        <textarea type="text" rows="2" placeholder="Write a message..."></textarea>
+        <textarea rows="2" appTextareaAutoresize placeholder="Write a message..."></textarea>
         <button mat-icon-button>
             <mat-icon>send</mat-icon>
           </button>
