hide chat navigation bar

--- a/src/app/chat/chat.component.html
+++ b/src/app/chat/chat.component.html
@@ -1,8 +1,8 @@
 <div class="chat-container">
-    <div class="chat-navigation">
+    <!-- <div class="chat-navigation">
         <button (click)="toggleNav()">☰</button>
         <app-navigation [hidden]="navHidden"></app-navigation>
-    </div>
+    </div> -->
     <div class="chat-content">
         <app-content></app-content>
     </div>
