--- a/src/app/chat/content/content.component.scss
+++ b/src/app/chat/content/content.component.scss
@@ -5,7 +5,10 @@
 }
 
 .messages {
-    flex: 1
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .input-message {
@@ -49,6 +52,7 @@
 }
 
 .message {
+    width: 80%;
     padding-top: 20px;
     padding-bottom: 20px;
     padding-left: 20px;
