update content css

--- a/src/app/chat/content/content.component.html
+++ b/src/app/chat/content/content.component.html
@@ -5,6 +5,9 @@
             <p>{{ message.text }}</p>
         </div>
     </div>
+    <div class="messages-hide">
+
+    </div>
     <div class="input-message">
         <textarea rows="2" appTextareaAutoresize placeholder="Write a message..."></textarea>
         <button mat-icon-button>
