--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,7 +1,12 @@
-<nav>
+<!-- <nav>
     <ul>
       <li><a routerLink="/chat">Chat</a></li>
       <li><a routerLink="/admin">Admin</a></li>
       <li><a routerLink="/user">User</a></li>
     </ul>
-  </nav>
+  </nav> -->
+
+
+<div class="header">
+  <p>CHATTY</p>
+</div>
