--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
   <div id="content">
     <router-outlet></router-outlet>
   </div>
-  <div id="footer">
+  <!-- <div id="footer">
     <app-footer></app-footer>
-  </div>
+  </div> -->
 </div>
