--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -7,10 +7,11 @@
   /* Header */
   #header {
     flex-shrink: 0;
-    height: 60px;
-    background-color: #333;
+    width: 100%;
+    background: linear-gradient(to right, #1A237E 50%, #311B92);
     color: #fff;
     display: flex;
+    flex-direction: column;
     justify-content: space-between;
     align-items: center;
   }
@@ -19,10 +20,11 @@
   #content {
     flex-grow: 1;
     overflow: auto;
-    color: white;
     display: flex;
     flex-direction: column;
     height: 100%;
+    background-color: whitesmoke;
+
   }
 
   :host ::ng-deep app-chat,app-admin {
@@ -38,7 +40,7 @@
   #footer {
     flex-shrink: 0;
     height: 60px;
-    background-color: #333;
+    background: linear-gradient(to right, #1A237E 50%, #311B92);
     color: #fff;
     display: flex;
     justify-content: center;
