--- a/src/app/chat/chat.component.scss
+++ b/src/app/chat/chat.component.scss
@@ -17,7 +17,7 @@ html, body{
 .chat-content {
     flex: 1;
     overflow: auto;
-    background-color: #353740;
+    background-color: whitesmoke;
 }
 
 button {
