--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,9 +1,14 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bruno+Ace+SC&display=swap');
 
 html,
 body {
   height: 100%;
   margin: 0;
+  background-color: whitesmoke;
+  color: white;
   font-family: 'Poppins', sans-serif !important;
+  // font-family: 'Bruno Ace SC', cursive !important;
+
 }
