--- a/src/app/chat/content/content.component.html
+++ b/src/app/chat/content/content.component.html
@@ -9,7 +9,7 @@
 
     </div>
     <div class="input-message">
-        <textarea rows="2" appTextareaAutoresize placeholder="Write a message..."></textarea>
+        <textarea rows="2" appTextareaAutoresize placeholder="Write a message..." [(ngModel)]="userinput" (keyup.enter)="send()"></textarea>
         <button mat-icon-button>
             <mat-icon>send</mat-icon>
           </button>
