--- a/src/app/chat/content/content.component.scss
+++ b/src/app/chat/content/content.component.scss
@@ -49,6 +49,8 @@
         background: linear-gradient(to right, #283593 97%, #303F9F);
         border-radius: 5px 0px 0px 5px;
         box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+        color: #f3f3f3;
+
     }
 
     button {
