--- a/src/app/chat/content/content.component.scss
+++ b/src/app/chat/content/content.component.scss
@@ -7,6 +7,7 @@
 }
 
 .messages {
+    overflow: auto;
     flex: 1;
     overflow-y: auto;
     display: flex;
@@ -61,6 +62,7 @@
         cursor: pointer;
     }
 
+    
     button:hover {
         background-color: #4c5cd6;
 
