--- a/src/app/chat/chat.component.scss
+++ b/src/app/chat/chat.component.scss
@@ -17,7 +17,7 @@ html, body{
 .chat-content {
     flex: 1;
     overflow: auto;
-    background-color: whitesmoke;
+    background-color: linear-gradient(to right, #BDD7EE 50%, #D257E7);
 }
 
 button {
