--- a/src/app/chat/content/content.component.scss
+++ b/src/app/chat/content/content.component.scss
@@ -3,7 +3,6 @@
     flex-direction: column;
     height: 100%;
     position: relative;
-
 }
 
 .messages {
@@ -13,18 +12,19 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding-bottom: 100px;  
+    padding-bottom: 100px;
 }
 
-.messages-hide{
+.messages-hide {
     position: fixed;
     bottom: 0;
     height: 140px;
     width: 100%;
-    background-color: whitesmoke;
+    background: linear-gradient(to right, #BDD7EE, #D257E7);
 
-    -webkit-mask-image: -webkit-gradient(linear, left top, left bottom, 
-    from(rgba(0,0,0,0)), to(whitesmoke));
+
+    -webkit-mask-image: -webkit-gradient(linear, left top, left bottom,
+            from(rgba(0, 0, 0, 0)), to(whitesmoke));
 }
 
 .input-message {
@@ -62,7 +62,7 @@
         cursor: pointer;
     }
 
-    
+
     button:hover {
         background-color: #4c5cd6;
 
@@ -80,15 +80,65 @@
     border-radius: 5px;
     box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
 
-    p{
+    p {
         padding: 10px;
+    }
+
+    display: flex;
+    flex-direction: row;
+}
+
+.message-additional {
+    button {
+        max-width: 16px;
+        max-height: 16px;
+        background-color: transparent;
+        border: none;
+        margin-left: 50px;
+        padding: 0;
+
+        i {
+            max-width: 16px;
+            height: auto;
+        }
+    }
+
+    button:hover{
+        cursor: pointer;
+
+        i {
+            color: white;
+        }
     }
 }
 
 .bot-message {
-    background: linear-gradient(to bottom, #4527A0 97%, #512DA8);
+    background: linear-gradient(to bottom, #6a4ac4 97%, #34388a);
 }
 
 .user-message {
-    background: linear-gradient(to bottom, #283593 97%, #303F9F);
+    background: linear-gradient(to bottom, #E5D4FC 97%, #dcc6f8);
 }
+
+
+.hexagon-container {
+    max-width: 64px;
+    max-height: 64px;
+    width: 20%;
+    height: 100%;
+    /* Controls the aspect ratio of the hexagon (height/width) */
+    position: relative;
+    overflow: hidden;
+    background-color: red;
+
+}
+
+//   .hexagon {
+//     position: absolute;
+//     top: 0;
+//     left: 0;
+//     right: 0;
+//     bottom: 0;
+//     background-color: rgba(255, 0, 0, 0.5); /* Adjust the alpha value (last parameter) to control the transparency */
+//     clip-path: polygon(50% 0, 100% 25%, 100% 75%, 50% 100%, 0 75%, 0 25%);
+//   }
