--- a/src/app/chat/content/content.component.html
+++ b/src/app/chat/content/content.component.html
@@ -7,14 +7,14 @@
                 <img *ngIf="message.author === 'user'" [src]="userLogo" alt="User">
 
             </div>
-            <div>
+            <div style="width: 100%;">
                 <p>{{ message.text }}</p>
                 <div *ngIf="message.author === 'bot'" class="message-additional">
                     <button (click)="like(message)">
-                        <i  [ngClass]="{'clicked': message.liked === true}" class="material-icons">thumb_up</i>
+                        <i [ngClass]="{'like-clicked': message.liked === true}" class="material-icons">thumb_up</i>
                     </button>
-                    <button (click)="unlike(message)">
-                        <i [ngClass]="{'clicked': message.unliked === true}" class="material-icons">thumb_down</i>
+                    <button  (click)="unlike(message)">
+                        <i [ngClass]="{'unlike-clicked': message.unliked === true}" class="material-icons">thumb_down</i>
                     </button>
                 </div>
             </div>
