--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -14,6 +14,8 @@
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
+
+    box-shadow: 0px 12px 14px rgba(0, 0, 0, 0.2);
   }
   
   /* Content */
