--- a/src/app/shared/header/header.component.scss
+++ b/src/app/shared/header/header.component.scss
@@ -1,44 +1,13 @@
 
 .header{
-  height: 50px;
+  height: 75px;
   display: flex;
   justify-content: center;
   align-items: center;
 
   p{
     font-family: 'Bruno Ace SC', cursive;
-    font-size: large;
+    font-size: xx-large;
     padding-top: 10px;
   }
 }
-
-
-
-
-
-ul {
-    display: flex;
-    flex-direction: column;
-  }
-  
-  li {
-    list-style: none;
-    flex-grow: 1;
-  }
-  
-  a {
-    display: inline-block;
-    font-size: 18px;
-    font-weight: bold;
-    text-decoration: none;
-    color: #fff;
-    background-color: #10002B;
-    border: none;
-    border-radius: 4px;
-    transition: all 0.3s ease;
-  }
-  
-  a:hover {
-    background-color: #555;
-    cursor: pointer;
-  }
